# ScientificComputing-set2

./: .gitignore  LICENSE  README.md  pyproject.toml  run_analysis_all.sh  run_analysis_partial.sh
scripts/: DLA_Laplace.py  ScientificComputing-set1.code-workspace  calculate_DLA_Laplace.py  calculate_find_optimal_omega.py  calculate_gray_scott.py  calculate_monte_carlo.py  calculate_speedup_DLA.py  find_optimal_omega.py  parallel_DLA_Laplace.py  test_parallel.py  visualise_gray_scott.py  visualize_DLA_Laplace.py  visualize_gray_scott.py  visualize_monte_carlo.py  visualize_optimal_omega.py  visualize_speedup_DLA.py
src/scientificcomputing_set2/: DLA_Laplace.py  gray_scott.py  monte_carlo.py  optimal_omega_DLA_Laplace.py  parallel_DLA_Laplace.py
tests/: test.py
