[project]
name = "scientificcomputing-set2"
version = "0.1.0"
description = "Set 2 of exercises for the Scientific Computing course"
authors = [
    {name = "PetrChalupsky",email = "petr.chalupsky@student.uva.nl"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numba (>=0.61.0,<0.62.0)",
    "numpy (>=2.1,<3.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
